# 4wheeledrobot_ws

./: .gitignore  README.md  TELEOP_GUIDE.md
src/nav2/: CMakeLists.txt  package.xml  setup.py
src/nav2/config/: amcl_params.yaml  nav2_params.yaml  rviz_config.rviz  slam_params.yaml
src/nav2/launch/: amcl.launch.py  complete_system.launch.py  gazebo.launch.py  nav2_bringup.launch.py  rviz.launch.py  slam.launch.py
src/nav2/nodes/: goal_publisher.py  navigation_node.py  robot_controller.py
src/nav2/urdf/: gazebo.xacro  robot.urdf.xacro
src/nav2/worlds/: rectangle_room.world
